--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
@@ -40,7 +40,7 @@
         <script type="text/javascript" src="http://www.ebi.ac.uk/inc/js/sidebars.js"></script>
         <img src="http://www.ebi.ac.uk/inc/images/spacer.gif" class="spacer" alt="spacer"/>
         
-        <h:panelGrid columns="1">
+        <h:panelGrid styleClass="default">
             <h:outputText value="Index: #{searchBean.defaultIndex.name}"/>
             <h:outputText value="Version: #{buildInfo.version}"/>
         </h:panelGrid>
