Font cleanup and more build info

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
@@ -43,6 +43,8 @@
         <h:panelGrid styleClass="default">
             <h:outputText value="Index: #{searchBean.defaultIndex.name}"/>
             <h:outputText value="Version: #{buildInfo.version}"/>
+            <h:outputText value="Build: #{buildInfo.buildNumber}"/>
+            <h:outputText value="By: #{buildInfo.builtBy}"/>
         </h:panelGrid>
 
     </ui:composition>
