--- a/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
@@ -26,7 +26,8 @@
 
                 <script type="text/javascript" src="#{appConfigBean.absoluteContextPath}/js/intact.js"></script>
 
-                <link rel="SHORTCUT ICON" href="#{appConfigBean.absoluteContextPath}/images/logo_intact_small.gif"/>
+                <link rel="SHORTCUT ICON" href="http://www.ebi.ac.uk/bookmark.ico" />
+                
                 <link rel="search" href="http://www.ebi.ac.uk/intact/site/plugins/plugins/openSearch/openSearch.xml"
                       type="application/opensearchdescription+xml" title="IntAct"/>
             </ui:define>
