- Cosmetic fixes - DREADFUL bug when loading the page with IE is now gone (fixed in ebifaces)

--- a/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
@@ -22,13 +22,13 @@
             <ui:define name="headsection">
 
                 <link rel="stylesheet" href="#{appConfigBean.absoluteContextPath}/inc/css/intact.css" type="text/css"/>
-                <script type="javascript" src="#{appConfigBean.absoluteContextPath}/inc/css/intact.css"></script>
+                <!--<script type="javascript" src="#{appConfigBean.absoluteContextPath}/inc/css/intact.css"></script>-->
 
-                <script type="text/javascript" src="#{appConfigBean.absoluteContextPath}/js/intact.js"></script>
+                <!--<script type="text/javascript" src="#{appConfigBean.absoluteContextPath}/js/intact.js"></script>-->
 
                 <link rel="SHORTCUT ICON" href="http://www.ebi.ac.uk/bookmark.ico" />
                 
-                <link rel="search" href="http://www.ebi.ac.uk/intact/site/plugins/plugins/openSearch/openSearch.xml"
+                <link rel="search" href="#{appConfigBean.absoluteContextPath}/plugins/openSearch/openSearch.xml"
                       type="application/opensearchdescription+xml" title="IntAct"/>
             </ui:define>
 
