--- a/repo/site/trunk/intact-site/src/main/webapp/search_help_content.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/search_help_content.xhtml
@@ -68,9 +68,9 @@
             <is:queryLink value="identifiers:P12345"/>
 
             <h:outputText value="pubauth"/>
-            <h:outputText value="Publication 1st author(s)  (not available yet)"/>
+            <h:outputText value="Publication 1st author(s)"/>
             <h:outputText value="Yes"/>
-            <h:outputText value="pubauth:"/>
+            <h:outputText value="pubauth:bantscheff"/>
              
             <h:outputText value="pubid"/>
             <h:outputText value="Publication Identifier(s)"/>
