Added pubauth example

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/help/search_help_content.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/help/search_help_content.xhtml
@@ -76,7 +76,7 @@
             <h:outputText value="pubauth"/>
             <h:outputText value="Publication 1st author(s)"/>
             <h:outputText value="Yes"/>
-            <h:outputText value="pubauth:bantscheff"/>
+            <bs:queryLink value="pubauth:bantscheff"/>
 
             <h:outputText value="pubid"/>
             <h:outputText value="Publication Identifier(s)"/>
