App build info shown in the sidebar

--- a/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
@@ -24,7 +24,7 @@
                 <link rel="stylesheet" href="#{appConfigBean.absoluteContextPath}/inc/css/intact.css" type="text/css"/>
                 <!--<script type="javascript" src="#{appConfigBean.absoluteContextPath}/inc/css/intact.css"></script>-->
 
-                <!--<script type="text/javascript" src="#{appConfigBean.absoluteContextPath}/js/intact.js"></script>-->
+                <script type="text/javascript" src="#{appConfigBean.absoluteContextPath}/inc/js/intact.js"></script>
 
                 <link rel="SHORTCUT ICON" href="http://www.ebi.ac.uk/bookmark.ico" />
                 
