Adivse users to contact us through the EBI help page and not intact-help anymore

--- a/repo/site/trunk/intact-site/src/main/webapp/contents/data_submission_content.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/contents/data_submission_content.xhtml
@@ -20,9 +20,8 @@
             Please read the <a href="http://imex.sourceforge.net/MIMIx/" target="_blank">IMEx guideline</a>
             for further details.
             <br/>
-            Should you require curator assistance, please contact
-            <a href="mailto:intact-help@ebi.ac.uk">intact-help@ebi.ac.uk</a>.
-
+            Should you require curator assistance, please
+        <a href="http://www.ebi.ac.uk/support/index.php?query=intact" target="_blank">contact us</a>.
     </ui:composition>
 
 
