- Added graphical representation - More export options (converted export page to servlet)

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/500_server_error.html
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/500_server_error.html
@@ -16,7 +16,7 @@
           <td>
             <table cellspacing="0" cellpadding="0" border="0" bordercolor="#999999" bgcolor="#FFFFFF" width="100%">
             <tr bgcolor="#eeeeee">
-              <td align="center"><a href="http://www.ebi.ac.uk/"><img src="http://www.ebi.ac.uk/toolsgifs/results_ebitop.jpg" width="442" height="86" border="0"></a>#160; </td>
+              <td align="center"><a href="http://www.ebi.ac.uk/"><img src="http://www.ebi.ac.uk/toolsgifs/results_ebitop.jpg" width="442" height="86" border="0"></a>&#160; </td>
               <td valign="top">
                 <div align="right"> <img src="http://www.ebi.ac.uk/images/trans.gif" width="203" height="15"> <br>
 
